fix: link popup link text overflow

--- a/packages/extension-menubar/src/MenuBar.less
+++ b/packages/extension-menubar/src/MenuBar.less
@@ -222,5 +222,6 @@
   font-size: 14px;
   text-overflow: ellipsis;
   overflow: hidden;
+  white-space: nowrap;
   max-width: 265px;
 }
